Specify data license

--- a/parlapi/templates/index.html
+++ b/parlapi/templates/index.html
@@ -11,7 +11,7 @@
       <h1>Bienvenue sur ParlAPI</h1>
       <article class="alert alert-info">
         <p><b>L'objectif de ParlAPI est de fournir une API réellement utilisable sur l'Open Data parlementaire.</b></p>
-        <p>Les données proviennent des portails Open Data parlementaires et sont fournies sous license CC-BY-SA :</p>
+        <p>Les données proviennent des portails Open Data parlementaires :</p>
         <p>
           <ul>
             <li><a href="http://data.assemblee-nationale.fr/" target="_blank">data.assemblee-nationale.fr</a></li>
@@ -19,7 +19,7 @@
           </ul>
         </p>
 
-        <p>Ce service a été conçu de manière à respecter le plus fidèlement possible le schéma de données des sources parlementaires.  En particulier, aucune donnée calculée n'est présente.</p>
+        <p>Ce service a été conçu de manière à respecter le plus fidèlement possible le schéma de données des sources parlementaires.  En particulier, aucune donnée calculée n'est ajoutée au modèle.</p>
       </article>
     </header>
     <div class="col-md-6">
@@ -89,13 +89,17 @@
 
   <footer class="well text-center">
     <small>
-      ParlAPI est un <a href="https://github.com/njoyard/parlapi" target="_blank">logiciel libre</a>,
-      distribué sous <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">license AGPLv3</a>
-      &mdash;
-      Les données sont réutilisables sous license
-      <a href="http://creativecommons.org/licenses/by-sa/2.0/fr/" target="_blank">
-        <img src="https://i.creativecommons.org/l/by-sa/2.0/fr/80x15.png" alt="CC-BY-SA">
-      </a>
+      <p>ParlAPI est un <a href="https://github.com/njoyard/parlapi" target="_blank">logiciel libre</a>,
+      distribué sous <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">license AGPLv3</a> &mdash;
+        Les données sont réutilisables sous license
+        <a href="http://creativecommons.org/licenses/by-sa/2.0/fr/" target="_blank">
+          <img src="https://i.creativecommons.org/l/by-sa/2.0/fr/80x15.png" alt="CC-BY-SA">
+        </a>
+        et <a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>.</p>
+
+      <p>
+        Vous êtes libre de réutiliser, modifier et recouper les données dans la mesure où vous indiquez leur source et que vous republiez les données modifiées ayant servi lors d'une réutilisation publiée.
+      </p>
     </small>
   </footer>
 </body>
