--- a/parlapi/templates/index.html
+++ b/parlapi/templates/index.html
@@ -41,7 +41,23 @@
 
           <p>Les points d'entrée vers les listes d'objets sont décrits ci-dessous.  Les objets JSON renvoyés par l'API comprennent des hyperliens vers d'autres sections de l'API (notamment, les items de liste comportent toujours un lien vers une version plus détaillée).</p>
 
-          <p><i>Note : la taille des pages peut être modifiée (ex: <code>{{ rest_prefix }}acteurs/?page_size=20</code>)</i></p>
+          <p>Il est possible de filtrer les résultats par une recherche textuelle, par exemple <a href="{{ rest_prefix }}organes/?search=commission des lois"><code>{{ rest_prefix }}organes/?search=commission des lois</code></a>.  La recherche textuelle porte sur tous les champs textuels présents dans les entités.</p>
+
+          <p>Par défaut les résultats incluent les éléments comportant tous les termes recherchés mais il est possible d'écrire les requêtes différemment :
+          <ul>
+            <li>
+              <a href="{{ rest_prefix }}organes/?search=commission or lois"><code>commission or lois</code></a> recherche les éléments comportant soit <code>commission</code>, soit <code>lois</code>.
+            </li>
+            <li>
+              <a href="{{ rest_prefix }}organes/?search=commission -lois"><code>commission -lois</code></a> recherche les éléments comportant <code>commission</code> mais pas <code>lois</code>.
+            </li>
+            <li>
+              <a href="{{ rest_prefix }}organes/?search=(commission or lois) -énergie"><code>(commission or lois) -énergie</code></a> recherche les éléments comportant <code>commission</code> ou <code>lois</code> mais pas <code>énergie</code>.
+            </li>
+          </ul>
+          </p>
+
+          <p><i>Note: La taille des pages peut être modifiée (ex: <a href="{{ rest_prefix }}acteurs/?page_size=20"><code>{{ rest_prefix }}acteurs/?page_size=20</code></a>)</i></p>
         </article>
         <table class="table table-striped table-responsive">
           <tr>
