--- a/parlapi/templates/index.html
+++ b/parlapi/templates/index.html
@@ -84,6 +84,10 @@
         </header>
         <article class="panel-body">
           <p>Cette API donne accès au schéma de données via des requêtes GraphQL.</p>
+
+          <p>Lorsqu'il est utilisé depuis un navigateur web, le point d'entrée ci-dessous présente une interface de requétage avec auto-complétion et une documentation auto-générée du modèle.</p>
+
+          <p><a href="{{ graphql_prefix }}{% raw %}?query={%0A  allActeurs(first%3A 10) {%0A    edges {%0A      node {%0A        civilite%0A        nom%0A        prenom%0A        mandats(first%3A 1) {%0A          edges {%0A            node {%0A              qualite%0A              organes {%0A                edges {%0A                  node {%0A                    libelle%0A                  }%0A                }%0A              }%0A            }%0A          }%0A        }%0A      }%0A    }%0A  }%0A}%0A{% endraw %}">Cliquez ici</a> pour ouvrir l'interface avec un exemple de requête permettant de lister les 10 premiers acteurs et leur 1er mandat, avec seulement certains champs renvoyés.</p>
         </article>
         <table class="table table-striped table-responsive">
           <tr>
