--- a/parlapi/templates/index.html
+++ b/parlapi/templates/index.html
@@ -3,6 +3,12 @@
   <title>ParlAPI</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}" />
+
+  <style type="text/css">
+    table i {
+      white-space: nowrap;
+    }
+  </style>
 </head>
 <body>
   <section class="container-fluid">
@@ -111,15 +117,16 @@
         <table class="table table-striped table-responsive">
           <tr>
             <th>Source</th>
-            <th>Dernière exécution</th>
+            <th>Dernière exécution (durée)</th>
+            <th>Objets</th>
             <th>État</th>
             <th>Fichier source</th>
-            <th>Date fichier source</th>
           </tr>
           {% for job in jobs %}
             <tr>
               <td>{{ job.nom }}</td>
-              <td>{{ job.date_exec }}</td>
+              <td>{{ job.date_exec | humanize_datetime }} <i>({{ job.temps_exec | humanize_seconds }})</i></td>
+              <td>{{ job.nb_items }}</td>
               <td>
                 {% if job.resultat == 'ok' %}
                   <span class="label label-success">OK</span>
@@ -127,8 +134,8 @@
                   <span class="label label-danger">{{ job.resultat }}</span>
                 {% endif %}
               </td>
-              <td><a href="{{ job.url_fichier }}" target="_blank">fichier</a></td>
-              <td>{{ job.date_fichier }}</td>
+              <td><a href="{{ job.url_fichier }}" target="_blank">{{ job.url_fichier | basename }}</a>
+              <i>(modifié {{ job.date_fichier | humanize_datetime }})</i></td>
             </tr>
           {% else %}
             <tr>
@@ -137,6 +144,9 @@
           {% endfor %}
         </table>
       </section>
+    </div>
+
+    <div class="col-md-12">
     </div>
   </section>
 
