Ajout diagramme ER

--- a/parlapi/templates/index.html
+++ b/parlapi/templates/index.html
@@ -29,6 +29,8 @@
         </p>
 
         <p>Ce service a été conçu de manière à respecter le plus fidèlement possible le schéma de données des sources parlementaires.  En particulier, aucune donnée calculée n'est ajoutée au modèle.</p>
+
+        <p><a href="{{ url_for('static', filename='parlapi-er.svg') }}">Consulter le diagramme E-R du modèle de données</a></p>
       </article>
     </header>
     <div class="col-md-12">
