--- a/parlapi/templates/index.html
+++ b/parlapi/templates/index.html
@@ -8,6 +8,10 @@
     table i {
       white-space: nowrap;
     }
+
+    h5 {
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -46,8 +50,9 @@
         <article class="panel-body">
           <p>L'API REST donne accès en lecture seule aux données au format JSON.</p>
 
-
           <p>Les points d'entrée vers les listes d'objets sont décrits ci-dessous.  Les objets JSON renvoyés par l'API comprennent des hyperliens vers d'autres sections de l'API (notamment, les items de liste comportent toujours un lien vers une version plus détaillée).</p>
+
+          <h5>Recherche <i>full-text</i></h5>
 
           <p>Il est possible de filtrer les résultats par une recherche textuelle, par exemple <a href="{{ rest_prefix }}organes/?search=commission des lois"><code>{{ rest_prefix }}organes/?search=commission des lois</code></a>.  La recherche textuelle porte sur tous les champs textuels présents dans les entités.</p>
 
@@ -65,7 +70,11 @@
           </ul>
           </p>
 
-          <p><i>Note: La taille des pages peut être modifiée (ex: <a href="{{ rest_prefix }}acteurs/?page_size=20"><code>{{ rest_prefix }}acteurs/?page_size=20</code></a>)</i></p>
+          <h5>Pagination</h5>
+
+          <p>Les listes d'objets sont paginées à raison de 10 objets par page, par défaut.  Chaque page indique le nombre total d'objets de la collection et des liens vers les pages précédentes et suivantes, le cas échéant.</p>
+
+          <p>La taille des pages peut être modifiée (ex: <a href="{{ rest_prefix }}acteurs/?page_size=20"><code>{{ rest_prefix }}acteurs/?page_size=20</code></a>).</p>
         </article>
         <table class="table table-striped table-responsive">
           <tr>
